--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           node-version: 22.12.0
       - name: Install dependencies
-        run: npm ci --legacy-peer-deps
+        run: pnpm install --frozen-lockfile
       #👇 Adds Chromatic as a step in the workflow
       - name: Run Chromatic
         uses: chromaui/action@latest
