--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -17,10 +17,10 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
       - name: 'Publish to npm registry'
         run: |
-          npm ci --legacy-peer-deps
-          npm run build
+          pnpm install --frozen-lockfile
+          pnpm run build
           git config --global user.email "55526292+daqichen@users.noreply.github.com" && git config --global user.name "daqichen"
-          npm version patch
-          npm publish --provenance --access public
+          pnpm version patch
+          pnpm publish --provenance --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
