--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -15,6 +15,10 @@ jobs:
         with:
           node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10 # docs https://pnpm.io/continuous-integration#github-actions
       - name: 'Publish to npm registry'
         run: |
           pnpm install --frozen-lockfile
