Add pnpm set-up

--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -17,6 +17,10 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 22.12.0
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10 # docs https://pnpm.io/continuous-integration#github-actions
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
       #👇 Adds Chromatic as a step in the workflow
