--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -24,6 +24,6 @@ jobs:
           pnpm install --frozen-lockfile
           pnpm run build
           git config --global user.email "55526292+daqichen@users.noreply.github.com" && git config --global user.name "daqichen"
-          pnpm publish --provenance --access public
+          pnpm publish --provenance --access public --no-git-checks
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
