--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "test": "vitest run"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^5.4.1",
     "@biomejs/biome": "^1.9.4",
     "@rsbuild/core": "1.4.0-beta.2",
     "@rsbuild/plugin-react": "^1.3.2",
@@ -52,14 +53,19 @@
     "@storybook/addon-links": "^9.0.5",
     "@storybook/addon-onboarding": "^9.0.5",
     "@storybook/blocks": "^9.0.0-alpha.17",
+    "@storybook/manager-api": "^8.6.14",
     "@storybook/react": "^9.0.5",
     "@storybook/test": "^9.0.0-alpha.2",
+    "@storybook/theming": "^8.6.14",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.9",
     "chromatic": "^13.1.0",
+    "eslint": "^9.36.0",
     "jsdom": "^26.1.0",
     "react": "^19.1.0",
+    "react-dom": "^19.1.1",
     "storybook": "^9.0.5",
     "storybook-addon-rslib": "^2.0.0",
     "storybook-react-rsbuild": "^2.0.0",
@@ -72,6 +78,7 @@
   },
   "dependencies": {
     "@types/sanitize-html": "^2.16.0",
+    "clsx": "^2.1.1",
     "sanitize-html": "^2.17.0"
   }
 }
